# snap-rs

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml  release.yml
docs/: design-spec.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_launcher.rs  commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/dock/: mod.rs  reader.rs  types.rs
src-tauri/src/icon/: extractor.rs  mod.rs
src-tauri/src/shortcut/: manager.rs  mod.rs
src/components/: AboutSection.svelte  DockAppList.svelte  SettingsPanel.svelte
src/lib/: api.ts  types.ts
src/routes/: +page.svelte
